# smart-home

./: .dockerignore  .gitignore  README.md  biome.jsonc  cspell.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/smart-home-ai-agent/: .env.local  .gitignore  Dockerfile  package.json  pyproject.toml
apps/smart-home-ai-agent/src/: config.py  main.py  utils.py
apps/smart-home-ai-agent/src/agent/: common.py  mcp.py
apps/smart-home-ai-agent/src/agent/prompt/: common.py
apps/smart-home-ai-agent/src/agent/workflows/common/: adjutmet_message_for_slack_node.py
apps/smart-home-ai-agent/src/agent/workflows/forecast_by_data/: forecast_electric_energy_by_data_node.py  state.py  workflow.py
apps/smart-home-ai-agent/src/agent/workflows/forecast_by_png/: forecast_electric_energy_by_png_node.py  gen_sensor_data_graph_node.py  get_sensor_duration_node.py  state.py  workflow.py
apps/smart-home-ai-agent/src/application/use_case/: create_electric_energy_report_use_case.py
apps/smart-home-ai-agent/src/domain/: analytics_smart_home_data.py
apps/smart-home-ai-agent/src/infra/: slack_client.py  smart_home_api_client.py
apps/smart-home-ai-agent/tests/: conftest.py  utils.py
apps/smart-home-ai-agent/tests/src/: test_utils.py
apps/smart-home-ai-agent/tests/src/application/use_case/: test_create_electric_energy_report_use_case.py
apps/smart-home-ai-agent/tests/src/domain/: test_analytics_smart_home_data.py
apps/smart-home-ai-agent/tests/src/infra/: test_slack_client.py
iac/: cdk.json  package.json  tsconfig.json
(+43 files in other folders)
